k8s/v1.37.0/clusters/dev/hello-kubernetes/kubernetes-objects/virtualServiceKubernetes.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-kubernetes-virtual-service
  namespace: hello-kubernetes
spec:
  hosts: ["hellokubernetes.maifuj.com"]
  gateways: ["istio-ingress/gateway-https"]
  http:
    - route:
        - destination:
            host: hello-kubernetes-hello-kubernetes-dev.hello-kubernetes.svc.cluster.local
            port:
              number: 8080
